--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.js"></script>
 
 </head>
 <body>
