--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -7,6 +7,8 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
   
+  <line-chart class="line-chart" [data] = "temp" [labels] = "hours"></line-chart>
+
 </ion-content>
