multi line chart

--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -9,6 +9,6 @@
 
 <ion-content padding>
   
-  <line-chart class="chart-div" title = "Title" [data] = "yValues" [xLabels] = "xValues"></line-chart>
+  <line-chart class="chart-div" title = "Title" [datas] = "datas" [xLabels] = "xValues"></line-chart>
 
 </ion-content>
