--- a/src/pages/page5/page5.html
+++ b/src/pages/page5/page5.html
@@ -11,7 +11,7 @@
 
 <ion-content padding>
 
-  <bar-chart class="chart-div" [colors] = "colors" [data] = "data" [labels] = "labels" ></bar-chart>
+  <bar-chart class="chart-div" [data] = "data" [labels] = "labels" ></bar-chart>
   <bar-chart class="chart-div" [colors] = "colors" [data] = "data" [labels] = "labels" horizontal="horizontal"></bar-chart>
 
 </ion-content>
