New Radar chart & transparent background

--- a/src/pages/page6/page6.html
+++ b/src/pages/page6/page6.html
@@ -3,12 +3,12 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Line Chart</ion-title>
+    <ion-title>Radar Chart</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   
-  <line-chart class="chart-div" title = "Title" [datas] = "datas" [xLabels] = "xLabels"></line-chart>
+  <radar-chart class="chart-div" title = "Title" [datas] = "datas" [xLabels] = "xLabels"></radar-chart>
 
 </ion-content>
