Bubble chart added

--- a/src/pages/page7/page7.html
+++ b/src/pages/page7/page7.html
@@ -9,6 +9,6 @@
 
 <ion-content padding>
   
-  <radar-chart class="chart-div" title = "Title" [datas] = "datas" [xLabels] = "xLabels"></radar-chart>
+  <bubble-chart class="chart-div" title = "Title" [datas] = "datas" [xLabels] = "xLabels"></bubble-chart>
 
 </ion-content>
