add min and max params to the bubble chart component

--- a/src/pages/page7/page7.html
+++ b/src/pages/page7/page7.html
@@ -9,6 +9,6 @@
 
 <ion-content padding>
   
-  <bubble-chart class="chart-div" title = "Title" [datas] = "datas" [xLabels] = "xLabels"></bubble-chart>
+  <bubble-chart class="chart-div" yMax=25 yMin=-5 xMax=12 xMin=-2 [title]="titles" [datas]="datas"></bubble-chart>
 
 </ion-content>
