configuration parameters added for line and bubble

--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -9,6 +9,11 @@
 
 <ion-content padding>
   
-  <line-chart class="chart-div" title = "Title" [datas] = "datas" [xLabels] = "xLabels"></line-chart>
+  <line-chart class="chart-div" [dataLabels]="dataLabels"
+                                [datas]="datas" 
+                                [xLabels]="xLabels"
+                                yMax=25
+                                yMin=0>
+  </line-chart>
 
 </ion-content>
