Pie chart parameters harmonized

--- a/src/pages/page3/page3.html
+++ b/src/pages/page3/page3.html
@@ -11,6 +11,9 @@
 
 <ion-content padding>
 
-  <pie-chart class="chart-div" [colors] = "colors" [data] = "data" [labels] = "labels"></pie-chart>
+  <pie-chart class="chart-div" [colors]="colors"
+                               [datas]="datas"
+                               [dataLabels]="dataLabels">
+  </pie-chart>
 
 </ion-content>
