donnut chat args harmonized

--- a/src/pages/page4/page4.html
+++ b/src/pages/page4/page4.html
@@ -11,6 +11,10 @@
 
 <ion-content padding>
 
-  <doughnut-chart class="chart-div" [colors] = "colors" [data] = "data" [labels] = "labels" half="half"></doughnut-chart>
+  <doughnut-chart class="chart-div" [colors]="colors"
+                                    [datas]="datas"
+                                    [dataLabels]="dataLabels"
+                                    half="half">
+  </doughnut-chart>
 
 </ion-content>
